# ebsrc

./: .gitignore  ARCHITECTURE.md  BUILD_NOTES.md  BUILD_PHASE1.md  C89_CONVERSION_GUIDE.md  CLAUDE.md  CMakeLists.txt  CRITICAL_TODO.md  DATA_STRATEGY.md  DEVELOPMENT.md  Makefile  Makefile.backup  Makefile.c  Makefile.phase1  README.md  TODO.md  check_progress.sh  snes_phase1.cfg  test_compile.c
include/: audio.h  battle.h  hardware.h  inventory.h  misc.h  overworld.h  psi.h  rom_data.h  structs.h  system.h  text.h
include/platform/: audio.h  graphics.h  input.h
src/: audio.c  battle.c  globals.c  inventory.c  main.c  misc.c  overworld.c  psi.c  rom_data.c  rom_data_c.c  spc700_transfer.s  stubs.c  system.c  system_legacy.c  text.c
src/platform/: audio.c  graphics.c  input.c
src/system/: irq_vector.critical.asm  nmi_vector.critical.asm  reset_vector.critical.asm  vectors.critical.asm
tools/: README.md  detect_rom_variant.py  generate_c_banks.py  generate_rom_data_header.py
